# WindFlow

./: .gitignore  .gitmodules  API  AUTHORS  CMakeLists.txt  LICENSE.MIT  Makefile  README.md  about.html  credits.html  dashboard.html  index.html  index.md  kafka.html  long_tests.sh  operators.html  patterns.html  performance.html  rocksdb.html  run_regression_gpu_tests.sh  run_regression_tests.sh  sitemap.xml  special.html  style.css  usage.html  usage_gpu.html
cmake/: FindGraphviz.cmake  FindLibRDKafka.cmake  FindRapidJSON.cmake  FindRocksdb.cmake  FindTBB.cmake
cmake.modules/: FindGraphviz.cmake  FindTBB.cmake
css/: prism.css
dockerimages/: Dockerfile_gpu  Dockerfile_nogpu
docs/: windflow-doxygen.conf
includes/: accumulator.hpp  basic.hpp  basic_emitter.hpp  broadcast_emitter.hpp  broadcast_node.hpp  builders.hpp  context.hpp  doxygen-mainpage.hpp  dummy.hpp  filter.hpp  flatmap.hpp  iterable.hpp  key_farm.hpp  key_farm_gpu.hpp  kf_nodes.hpp  local_storage.hpp  map.hpp  meta_utils.hpp  multipipe.hpp  orderingNode.hpp  ordering_node.hpp  pane_farm.hpp  pane_farm_gpu.hpp  pipe.hpp  pipegraph.hpp  shipper.hpp  sink.hpp  source.hpp  splitting_emitter.hpp  standard.hpp  standard_nodes.hpp  stream_archive.hpp  transformations.hpp  tree_combiner.hpp  tree_emitter.hpp  wf_nodes.hpp  win_farm.hpp  win_farm_gpu.hpp  win_mapreduce.hpp  (+7 more)
tests/: CMakeLists.txt  Makefile
tests/graph_tests/: CMakeLists.txt  Makefile  graph_common.hpp  test_graph_1.cpp  test_graph_10.cpp  test_graph_11.cpp  test_graph_12.cpp  test_graph_2.cpp  test_graph_3.cpp  test_graph_4.cpp  test_graph_5.cpp  test_graph_6.cpp  test_graph_7.cpp  test_graph_8.cpp  test_graph_9.cpp  test_simple.cpp
tests/graph_tests_gpu/: CMakeLists.txt  graph_common_gpu.hpp  test_graph_gpu_1.cpp  test_graph_gpu_2.cpp  test_graph_gpu_3.cpp  test_graph_gpu_4.cpp  test_graph_gpu_5.cpp
tests/icde_tmp/: Makefile  aggregates.hpp  common.hpp  common_saber.hpp  test_saber.cpp  test_synth_gpu.cpp  test_synth_gpu_delayed.cpp  test_synth_gpu_keyed.cpp
tests/join_tests/: CMakeLists.txt  join_common.hpp  test_join_1.cpp  test_join_2.cpp  test_join_3.cpp  test_join_4.cpp  test_join_5.cpp
tests/kafka_tests/: CMakeLists.txt  kafka_common.hpp  kafka_producer.cpp  server.properties  test_kafka.cpp
tests/merge_tests/: CMakeLists.txt  Makefile  merge_common.hpp  test_merge_1.cpp  test_merge_2.cpp  test_merge_3.cpp  test_merge_4.cpp
tests/merge_tests_gpu/: CMakeLists.txt  merge_common_gpu.hpp  merge_common_gpu_kb.hpp  test_merge_gpu_1.cpp  test_merge_gpu_2.cpp  test_merge_gpu_3.cpp  test_merge_gpu_4.cpp  test_merge_gpu_5.cpp  test_merge_gpu_kb_1.cpp  test_merge_gpu_kb_2.cpp  test_merge_gpu_kb_3.cpp  test_merge_gpu_kb_4.cpp  test_merge_gpu_kb_5.cpp
tests/miscellanea/: CMakeLists.txt  misc_common.hpp  test_diagram.cpp  test_tracing.cpp  test_tracing_1.cpp  test_tracing_2.cpp  test_tracing_3.cpp  test_tracing_4.cpp
tests/mp_tests_cpu/: CMakeLists.txt  Makefile  mp_common.hpp  mp_common_string.hpp  test_mp_kf+pf_cb.cpp  test_mp_kf+pf_tb.cpp  test_mp_kf+pf_tb_2.cpp  test_mp_kf+pf_tb_oop.cpp  test_mp_kf+pf_tb_prob.cpp  test_mp_kf+wmr_cb.cpp  test_mp_kf+wmr_tb.cpp  test_mp_kf+wmr_tb_2.cpp  test_mp_kf+wmr_tb_oop.cpp  test_mp_kf+wmr_tb_prob.cpp  test_mp_kf_cb.cpp  test_mp_kf_cb_oop.cpp  test_mp_kf_cb_prob.cpp  test_mp_kf_cb_string.cpp  test_mp_kf_tb.cpp  test_mp_kf_tb_2.cpp  test_mp_kf_tb_oop.cpp  test_mp_kf_tb_prob.cpp  test_mp_kff_cb.cpp  test_mp_kff_cb_oop.cpp  test_mp_kff_cb_prob.cpp  test_mp_kff_tb.cpp  test_mp_kff_tb_2.cpp  test_mp_kff_tb_oop.cpp  test_mp_kff_tb_prob.cpp  test_mp_pf_cb.cpp  test_mp_pf_cb_string.cpp  test_mp_pf_tb.cpp  test_mp_pf_tb_2.cpp  test_mp_pf_tb_oop.cpp  test_mp_pf_tb_prob.cpp  test_mp_wf+pf_cb.cpp  test_mp_wf+pf_tb.cpp  test_mp_wf+pf_tb_2.cpp  test_mp_wf+pf_tb_oop.cpp  test_mp_wf+pf_tb_prob.cpp  (+17 more)
tests/mp_tests_gpu/: CMakeLists.txt  Makefile  mp_common.hpp  mp_common_string.hpp  test_mp_gpu_kf+pf_cb.cpp  test_mp_gpu_kf+pf_tb.cpp  test_mp_gpu_kf+pf_tb_2.cpp  test_mp_gpu_kf+pf_tb_oop.cpp  test_mp_gpu_kf+pf_tb_prob.cpp  test_mp_gpu_kf+wmr_cb.cpp  test_mp_gpu_kf+wmr_tb.cpp  test_mp_gpu_kf+wmr_tb_2.cpp  test_mp_gpu_kf+wmr_tb_oop.cpp  test_mp_gpu_kf+wmr_tb_prob.cpp  test_mp_gpu_kf_cb.cpp  test_mp_gpu_kf_cb_oop.cpp  test_mp_gpu_kf_cb_string.cpp  test_mp_gpu_kf_tb.cpp  test_mp_gpu_kf_tb_2.cpp  test_mp_gpu_kf_tb_oop.cpp  test_mp_gpu_kf_tb_prob.cpp  test_mp_gpu_kff_cb.cpp  test_mp_gpu_kff_cb_oop.cpp  test_mp_gpu_kff_cb_prob.cpp  test_mp_gpu_kff_tb.cpp  test_mp_gpu_kff_tb_2.cpp  test_mp_gpu_kff_tb_oop.cpp  test_mp_gpu_kff_tb_prob.cpp  test_mp_gpu_pf_cb.cpp  test_mp_gpu_pf_cb_string.cpp  test_mp_gpu_pf_tb.cpp  test_mp_gpu_pf_tb_2.cpp  test_mp_gpu_pf_tb_oop.cpp  test_mp_gpu_pf_tb_prob.cpp  test_mp_gpu_wf+pf_cb.cpp  test_mp_gpu_wf+pf_tb.cpp  test_mp_gpu_wf+pf_tb_2.cpp  test_mp_gpu_wf+pf_tb_oop.cpp  test_mp_gpu_wf+pf_tb_prob.cpp  test_mp_gpu_wf+wmr_cb.cpp  (+16 more)
tests/rocksdb_tests/: CMakeLists.txt  rocksdb_common.hpp  test_rocksdb_1.cpp  test_rocksdb_2.cpp  test_rocksdb_3.cpp  test_rocksdb_4.cpp  test_rocksdb_5.cpp  test_rocksdb_6.cpp  test_rocksdb_7.cpp  test_rocksdb_8.cpp  test_rocksdb_9.cpp
tests/split_tests/: CMakeLists.txt  Makefile  split_common.hpp  test_split_1.cpp  test_split_2.cpp  test_split_3.cpp  test_split_4.cpp  test_split_5.cpp
tests/split_tests_gpu/: CMakeLists.txt  split_common_gpu.hpp  split_common_gpu_kb.hpp  test_split_gpu_1.cpp  test_split_gpu_2.cpp  test_split_gpu_3.cpp  test_split_gpu_4.cpp  test_split_gpu_5.cpp  test_split_gpu_kb_1.cpp  test_split_gpu_kb_2.cpp  test_split_gpu_kb_3.cpp  test_split_gpu_kb_4.cpp  test_split_gpu_kb_5.cpp
tests/win_tests/: CMakeLists.txt  test_win_fat_cb.cpp  test_win_fat_tb.cpp  test_win_kw_cb.cpp  test_win_kw_tb.cpp  test_win_mrw_cb.cpp  test_win_mrw_tb.cpp  test_win_paw_cb.cpp  test_win_paw_tb.cpp  test_win_pw_cb.cpp  test_win_pw_tb.cpp  win_common.hpp
tests/win_tests_gpu/: CMakeLists.txt  test_win_fat_gpu_tb.cpp  test_win_fatgpu_gpu_tb.cpp  test_win_kw_gpu_tb.cpp  test_win_mrw_gpu_tb.cpp  test_win_paw_gpu_tb.cpp  test_win_pw_gpu_tb.cpp  win_common_gpu.hpp
(+499 files in other folders)
